--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
     <meta content='width=device-width, initial-scale=1.0' name='viewport'>
     <title>購物達人</title>
-    <link href='http://i.imgur.com/JUG0yXC.png' rel='shortcut icon'>
+    <link href='https://i.imgur.com/JUG0yXC.png' rel='shortcut icon'>
     <link href='./style/css/create.css' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <!-- Magnific Popup core CSS file -->
     <link rel="stylesheet" href="./style/css/magnific-popup.css">
     <link rel="stylesheet" href="./style/css/flexslider.css">   
@@ -214,7 +214,7 @@
                   <ul class="slides">
                     <li>
                       <a href="#" target="_blank">
-                        <img src="http://i.imgur.com/bckIoWG.jpg" />
+                        <img src="https://i.imgur.com/bckIoWG.jpg" />
                         <p class="flex-caption">
                           <span>出國就是要買Dyson啊！不然要幹麻！【台灣、日本、美國、德國、英國  型號/價格 大統整】
                           </span>
@@ -223,7 +223,7 @@
                     </li>
                     <li>
                       <a href="#" target="_blank">
-                        <img src="http://i.imgur.com/2DtCksZ.jpg" />
+                        <img src="https://i.imgur.com/2DtCksZ.jpg" />
                         <p class="flex-caption">
                           <span>燦坤9/3日會員日降價時間表</span>
                         </p>
@@ -231,7 +231,7 @@
                     </li>
                     <li>
                       <a href="#" target="_blank">
-                        <img src="http://i.imgur.com/78YRAqs.jpg" />
+                        <img src="https://i.imgur.com/78YRAqs.jpg" />
                         <p class="flex-caption">
                           <span>【精華】iPhone6S發表前最後價格預測！</span>
                         </p>
@@ -239,7 +239,7 @@
                     </li>
                     <li>
                       <a href="#" target="_blank">
-                        <img src="http://i.imgur.com/OLLkAhM.jpg" />
+                        <img src="https://i.imgur.com/OLLkAhM.jpg" />
                         <p class="flex-caption">
                           <span>【精華】以超低價格入手最新版Macbook Air 的攻略！更新至 2015/08/31</span>
                         </p>
@@ -247,7 +247,7 @@
                     </li>
                     <li>
                       <a href="#" target="_blank">
-                        <img src="http://i.imgur.com/2DtCksZ.jpg" />
+                        <img src="https://i.imgur.com/2DtCksZ.jpg" />
                         <p class="flex-caption">
                           <span>超夯5大熱銷品，這樣買最划算！ 日本Bic Camera + 信用卡優惠 超強攻略！！</span>
                         </p>
@@ -258,7 +258,7 @@
                 <div class='art_list art_list_border'>
                   <div class='art_list_pic'>
                     <a href='./news_content.html'>
-                      <img alt='' src='http://i.imgur.com/AlTbVJK.png'>
+                      <img alt='' src='https://i.imgur.com/AlTbVJK.png'>
                     </a>
                   </div>
                   <div class='art_list_text'>
@@ -279,7 +279,7 @@
                 <div class='art_list'>
                   <div class='art_list_pic'>
                     <a href='./news_content.html'>
-                      <img alt='' src='http://i.imgur.com/Dvyq747.png'>
+                      <img alt='' src='https://i.imgur.com/Dvyq747.png'>
                     </a>
                   </div>
                   <div class='art_list_text'>
@@ -301,7 +301,7 @@
                 <div class='art_list art_list_border'>
                   <div class='art_list_pic'>
                     <a href='./news_content.html'>
-                      <img alt='' src='http://i.imgur.com/rWfDPY1.png'>
+                      <img alt='' src='https://i.imgur.com/rWfDPY1.png'>
                     </a>
                   </div>
                   <div class='art_list_text'>
@@ -319,7 +319,7 @@
                 <div class='art_list'>
                   <div class='art_list_pic'>
                     <a href='./news_content.html'>
-                      <img alt='' src='http://i.imgur.com/RzrvcJ4.png'>
+                      <img alt='' src='https://i.imgur.com/RzrvcJ4.png'>
                     </a>
                   </div>
                   <div class='art_list_text'>
@@ -338,7 +338,7 @@
                 <div class='art_list art_list_border'>
                   <div class='art_list_pic'>
                     <a href='./news_content.html'>
-                      <img alt='' src='http://i.imgur.com/9Jhk94C.png'>
+                      <img alt='' src='https://i.imgur.com/9Jhk94C.png'>
                     </a>
                   </div>
                   <div class='art_list_text'>
@@ -360,7 +360,7 @@
                 <div class='art_list'>
                   <div class='art_list_pic'>
                     <a href='./news_content.html'>
-                      <img alt='' src='http://i.imgur.com/zZhbhvg.png'>
+                      <img alt='' src='https://i.imgur.com/zZhbhvg.png'>
                     </a>
                   </div>
                   <div class='art_list_text'>
@@ -379,7 +379,7 @@
                 <div class='art_list art_list_border'>
                   <div class='art_list_pic'>
                     <a href='./news_content.html'>
-                      <img alt='' src='http://i.imgur.com/AlTbVJK.png'>
+                      <img alt='' src='https://i.imgur.com/AlTbVJK.png'>
                     </a>
                   </div>
                   <div class='art_list_text'>
@@ -400,7 +400,7 @@
                 <div class='art_list'>
                   <div class='art_list_pic'>
                     <a href='./news_content.html'>
-                      <img alt='' src='http://i.imgur.com/Dvyq747.png'>
+                      <img alt='' src='https://i.imgur.com/Dvyq747.png'>
                     </a>
                   </div>
                   <div class='art_list_text'>
@@ -422,7 +422,7 @@
                 <div class='art_list art_list_border'>
                   <div class='art_list_pic'>
                     <a href='./news_content.html'>
-                      <img alt='' src='http://i.imgur.com/rWfDPY1.png'>
+                      <img alt='' src='https://i.imgur.com/rWfDPY1.png'>
                     </a>
                   </div>
                   <div class='art_list_text'>
@@ -440,7 +440,7 @@
                 <div class='art_list'>
                   <div class='art_list_pic'>
                     <a href='./news_content.html'>
-                      <img alt='' src='http://i.imgur.com/RzrvcJ4.png'>
+                      <img alt='' src='https://i.imgur.com/RzrvcJ4.png'>
                     </a>
                   </div>
                   <div class='art_list_text'>
