--- a/news_content.html
+++ b/news_content.html
@@ -813,17 +813,13 @@
                         </div>
                       </div>
                     </div>
-                    <div class="art_tagBox">
-                      <p>轉載網址：<a href="https://guide.ezprice.com.tw/5965/" style="display:inline-block">http://guide.ezprice.com.tw/5965/</a></p>
-                      <p>歡迎大家轉載，但請保留EZprice比價網原文網址與註明出處，謝謝！</p>
-                    </div>
                     <div class='art_shareBox _line'>
                       <div class="fb-like" data-layout="button" style="top:-6px"></div>
                       <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button" style="top:-6px"></div>
                       <div class="g-plusone" data-size="medium" data-annotation="none"></div>
                       <a href="https://twitter.com/share" class="twitter-share-button" data-count="none">Tweet</a>
                       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-                      <a href="http://line.me/R/msg/text/?guide.ezprice.com.tw/5317/"><img src="http://i.imgur.com/Lx51bjU.png" width="100" style="max-width: none;height: 24px;display: inline-block;margin: 0;"></a>
+                      <a href="#"><img src="https://i.imgur.com/Lx51bjU.png" width="100" style="max-width: none;height: 24px;display: inline-block;margin: 0;"></a>
                       <!-- <div class='shareBox _margin'>
                         <div class='_block _share'>分享</div>
                         <div class='_block _fb'>
@@ -1035,7 +1031,7 @@
                   </div>
                   <div class='art_mdContent'>
                     <div class='HD_Search'>
-                      <form action='http://ezprice.com.tw/price_list.php' enctype='multipart/form-data' id='submit' method='get' name='srhform'>
+                      <form enctype='multipart/form-data' id='submit' method='get' name='srhform'>
                         <div class='HD_Search_Box'>
                           <div class='HD_Search_text_outer'>
                             <input autocomplete='off' class='HD_Search_text' id='srhkw1' name='kw' placeholder='站內搜尋' type='text'>
